Loading spinner added

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -112,6 +112,7 @@
       </div>
       <div class="loading-sign" *ngIf="isLoading">
         <h4>Cargando más productos...</h4>
+        <div class="loading-circle"></div>
       </div>
   </div>
 </div>
