--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -340,9 +340,34 @@ input, select {
     border: 2px dashed #333;
 }
 .loading-sign {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     text-align: center;
     margin: 10% 10% 4% 10%;
+    gap: 20px;
+}
+.loading-circle {
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    border-radius: 50%;
+    background: transparent;
+    animation: rotating 2s linear infinite;
+}
+@keyframes rotating {
+    0% {
+        transform: rotate(0deg);
+        box-shadow: 3px 0px 0px #ed17c2;
+    }
+    50% {
+        transform: rotate(180deg);
+        box-shadow: 3px 0px 0px #f8cd60;
+    }
+    100% {
+        transform: rotate(360deg);
+        box-shadow: 3px 0px 0px #ed17c2;
+    }
 }
 
 /* MOBILE VIEW */
