--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -60,14 +60,54 @@ form {
 .magnifying-glass {
     color: #000923;
 }
-.visual-theme-container {
+.cart {
     width: fit-content;
     display: flex;
     background: linear-gradient(#323232, #232323);
 }
-.login-btn-container {
-    background: linear-gradient(#323232, #232323);
+.cart > .flechita {
+    display: none;
+    position: absolute;
+    top: 90px;
+    right: 105px;
+    width: 40px;
+    height: 40px;
+    background: linear-gradient(120deg, #f2dd6c, #ffcc4b);
+    transform: translate(50%, -50%) rotate(45deg);
+}
+.cart-modal {
+    display: none;
+    width: 200px;
+    height: 400px;
+    position: absolute;
+    top: 90px;
+    right: 30px;
+    background: radial-gradient(#ffee93, #eab941);
+    z-index: 1;
+    border-radius: 2%;
+    box-shadow: 10px 6px 20px 0px rgba(0,0,0,0.18);
+}
+.cart-modal > h3 {
+    text-align: center;
+    margin: 10px auto;
+    color: #000;
+}
+.cart-modal-product-list {
     display: flex;
+    flex-direction: column;
+    padding: 10px 20px;
+    gap: 10px;
+    color: #000;
+    text-transform: uppercase;
+    overflow-y: auto;
+    height: 337px;
+    scrollbar-color: white black;
+    scrollbar-width: thin;
+}
+.visual-theme-container {
+    width: fit-content;
+    display: flex;
+    background: linear-gradient(#323232, #232323);
 }
 .login-btn {
     margin: 15px;
@@ -77,6 +117,13 @@ form {
     border-radius: 50%;
     min-width: 40px;
     cursor: pointer;
+}
+.login-btn-container {
+    background: linear-gradient(#323232, #232323);
+    display: flex;
+}
+.mobile-view-container {
+    display: none;
 }
 .nav {
     display: flex;
@@ -104,12 +151,14 @@ button:hover {
 li:hover {
     background: radial-gradient(#ffee93, #fd9b34);
 }
-.mobile-view-container {
-    display: none;
-}
+
 /* MOBILE VIEW */
 @media screen and (max-width: 820px) {
     .visual-theme-container {
+        display: none;
+        background: transparent;
+    }
+    .cart {
         display: none;
         background: transparent;
     }
@@ -124,6 +173,9 @@ li:hover {
         justify-content: center;
     }
     .mobile-view-container .visual-theme-container {
+        display: flex;
+    }
+    .mobile-view-container .cart {
         display: flex;
     }
     .mobile-view-container .login-btn-container {
@@ -147,8 +199,8 @@ li:hover {
     }
     .search-form {
         display: flex;
+        flex-direction: column;
         width: 100%;
-        height: 70px;
         margin: 0;
         gap: 10px;
         justify-content: center;
@@ -156,19 +208,13 @@ li:hover {
     form {
         display: flex;
         align-items: center;
-        width: 244px;
+        width: 300px;
+        height: 70px;
         background: transparent;
+        margin: 0 auto -20px auto;
     }
     .search-bar {
-        font-size: 20px;
-        width: 100%;
-        height: 60%;
-        padding-left: 15px;
-        padding-right: 50px;
-        border-radius: 100px;
-        border: none;
-        outline: none;
-        min-width: 244px;
+        width: 300px;
         box-sizing: border-box;
     }
     .search-btn {
