--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,19 +11,50 @@
                         <button class="login-btn" id="bright-theme-btn"><i class="fa-solid fa-sun"></i></button>
                         <button class="login-btn" id="dark-theme-btn"><i class="fa-solid fa-moon"></i></button>
                     </div>
+                    <div class="cart">
+                        <button class="login-btn" id="cart-button"><i class="fa-solid fa-cart-shopping"></i></button>
+                        <div class="flechita"></div>
+                        <div class="cart-modal">
+                            <h3>CARRITO</h3>
+                            <div class="cart-modal-product-list">
+                                <div *ngFor="let product of cartProducts">
+                                    <img [src]="product.img" width="50px">
+                                    <p>{{product.nombre}}</p>
+                                    <p>Precio: {{product.precio}}</p>
+                                    <p class="cantidad">Cantidad: {{product.cantidad}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="login-btn-container">
                         <button (click)="logOut()" *ngIf="isLogged" class="login-btn"><i class="fa-solid fa-right-to-bracket"></i></button>
                         <button routerLink="/login" *ngIf="!isLogged" class="login-btn"><i class="fa-solid fa-right-to-bracket"></i></button>
                     </div>
-                </div>
-                <div class="mobile-view-container">
-                    <div class="visual-theme-container">
-                        <button class="login-btn" id="bright-theme-btn-mblvw"><i class="fa-solid fa-sun"></i></button>
-                        <button class="login-btn" id="dark-theme-btn-mblvw"><i class="fa-solid fa-moon"></i></button>
-                    </div>
-                    <div class="login-btn-container">
-                        <button (click)="logOut()" *ngIf="isLogged" class="login-btn"><i class="fa-solid fa-right-to-bracket"></i></button>
-                        <button routerLink="/login" *ngIf="!isLogged" class="login-btn"><i class="fa-solid fa-right-to-bracket"></i></button>
+                    
+                    <div class="mobile-view-container">
+                        <div class="visual-theme-container">
+                            <button class="login-btn" id="bright-theme-btn-mblvw"><i class="fa-solid fa-sun"></i></button>
+                            <button class="login-btn" id="dark-theme-btn-mblvw"><i class="fa-solid fa-moon"></i></button>
+                        </div>
+                        <div class="cart">
+                            <button class="login-btn" id="cart-button"><i class="fa-solid fa-cart-shopping"></i></button>
+                            <div class="flechita"></div>
+                            <div class="cart-modal">
+                                <h3>CARRITO</h3>
+                                <div class="cart-modal-product-list">
+                                    <div *ngFor="let product of cartProducts">
+                                        <img [src]="product.img">
+                                        <p>{{product.nombre}}</p>
+                                        <p>{{product.precio}}</p>
+                                        <p>{{product.cantidad}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="login-btn-container">
+                            <button (click)="logOut()" *ngIf="isLogged" class="login-btn"><i class="fa-solid fa-right-to-bracket"></i></button>
+                            <button routerLink="/login" *ngIf="!isLogged" class="login-btn"><i class="fa-solid fa-right-to-bracket"></i></button>
+                        </div>
                     </div>
                 </div>
         </div>
