--- a/src/app/components/product-details/product-details.component.css
+++ b/src/app/components/product-details/product-details.component.css
@@ -101,6 +101,10 @@ body {
     padding: 20px 0;
     border-bottom: 1px solid #eee;
 }
+.stock-container {
+    padding: 20px 0;
+    border-bottom: 1px solid #eee;
+}
 #add-image-color {
     width: fit-content;
     margin-top: 20px;
