--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -150,6 +150,10 @@
             <input type="number" id="precio" name="precio" [(ngModel)]="precio">
         </div>
         <div class="div-modal">
+            <label for="stock">Stock</label>
+            <input type="number" id="stock" name="stock" [(ngModel)]="stock">
+        </div>
+        <div class="div-modal">
             <div class="subir-imagen">
                 <div>
                     <h2>⬇⬇ Subir imagen ⬇⬇</h2>
