--- a/src/app/components/product-details/product-details.component.css
+++ b/src/app/components/product-details/product-details.component.css
@@ -105,11 +105,11 @@ body {
     padding: 20px 0;
     border-bottom: 1px solid #eee;
 }
-#add-image-color {
+.add-buttons-container {
     width: fit-content;
     margin-top: 20px;
 }
-#add-image-color-btn {
+.buttons-golden-style {
     width: 100%;
     border: none;
     background: radial-gradient(#ffee93, #eab941);
@@ -121,7 +121,7 @@ body {
     border-radius: 10px;
     box-shadow: 10px 8px 20px 0px rgba(0,0,0,0.18);
 }
-#add-image-color-btn:hover {
+.buttons-golden-style:hover {
     background: radial-gradient(#ffee93, #fd9b34);
 }
 button {
@@ -222,10 +222,6 @@ button {
         width: 100vw;
         margin-top: 30px;
     }
-    .color-container {
-        justify-content: center;
-        min-width: fit-content;
-    }
     .img_container {
         width: 100%;
         margin-left: 0;
@@ -237,8 +233,17 @@ button {
     .otras-imagenes {
         width: auto;
     }
+    .color-container {
+        justify-content: center;
+        min-width: fit-content;
+    }
     .details {
         width: auto;
+    }
+    #modal-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .div-modal {
         align-items: center;
