--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -42,11 +42,11 @@
             </ng-container>
         </div>
         <div id="modal-container">
-            <div id="add-image-color" [hidden]="!isAdmin">
-                <button #addColorBtn id="add-image-color-btn">Agregar imagen y color</button>
+            <div class="add-buttons-container" [hidden]="!isAdmin">
+                <button #addColorBtn class="buttons-golden-style">Agregar imagen y color</button>
             </div>
-            <div>
-                <button (click)="addProductToCart()">Agregar al carrito</button>
+            <div class="add-buttons-container">
+                <button class="buttons-golden-style" (click)="addProductToCart()">Agregar al carrito</button>
             </div>
             <!-- <div>
                 <button>Agregar todas las variantes al carrito</button>
